--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ repositories {
     mavenCentral()
 }
 
-
+run {
+    main = 'com.bti.Bti'
+    }
+    
 springBoot {
     mainClass = 'com.bti.Bti'
 }
